gitops/apps/draw/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: draw
  labels:
    name: draw
